z-index fixed

--- a/scroll portfolio/styles/main.css
+++ b/scroll portfolio/styles/main.css
@@ -39,6 +39,7 @@ body {
 	padding-top: 750px;
 	background: url(two.png);
 	background-repeat: no-repeat;
+	z-index: -1;
 }
 
 .three {
@@ -71,5 +72,5 @@ body {
 }
 
 nav {
-	z-index: 100;
+	z-index: 1000;
 }
